// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/BetterGR/grades-microservice/protos";

package grades;

//GradesService is a microservice responsible for managing grades.
service GradesService {
  // GetCourseGrades returns all students grades enrolled in a specific course for a specific semester.
  rpc GetCourseGrades(GetCourseGradesRequest) returns (GetCourseGradesResponse);
  // GetStudentCourseGrades returns a specific student all grades in a specific course for a specific semester.
  rpc GetStudentCourseGrades(GetStudentCourseGradesRequest) returns (GetStudentCourseGradesResponse);
  // AddSingleGrade adds a single grade for a student in a course for a specific semester.
  rpc AddSingleGrade(AddSingleGradeRequest) returns (AddSingleGradeResponse);
  // UpdateSingleGrade updates a single grade for a student in a course for a specific semester.
  rpc UpdateSingleGrade(UpdateSingleGradeRequest) returns (UpdateSingleGradeResponse);
  // RemoveSingleGrade removes a single grade for a student in a course for a specific semester.
  rpc RemoveSingleGrade(RemoveSingleGradeRequest) returns (RemoveSingleGradeResponse);
  // GetStudentSemesterGrades returns all grades for a specific student for a specific semester.
  rpc GetStudentSemesterGrades(GetStudentSemesterGradesRequest) returns (GetStudentSemesterGradesResponse);
}


// SingleGrade is a single grade message.
message SingleGrade {
  string semester = 1;
  string gradeId = 2;
  string studentId = 3;
  string courseId = 4;
  string gradeType = 5;
  string itemId = 6;
  string gradeValue = 7;
  string gradedBy = 8;
  string comments = 9;
}

// AddSingleGradeRequest is a request message to add a single grade for a student in a course.
message AddSingleGradeRequest {
  string token = 1;
  string semester = 2;
  string gradeId = 3;
  string studentId = 4;
  string courseId = 5;
  string gradeType = 6;
  string itemId = 7;
  string gradeValue = 8;
  string gradedBy = 9;
  string comments = 10;
}

// AddSingleGradeResponse is a response message to add a single grade for a specific student in a specific course for a specific semester.
message AddSingleGradeResponse {
  SingleGrade grade = 1;
}

// GetStundetCourseGradesRequest is a request message to get all grades for a student in a specific course for a specific semester.
message GetStudentCourseGradesRequest {
  string token = 1;
  string courseId = 2;
  string semester = 3;
  string studentId = 4;
}

// GetStudentCourseGradesResponse is a response message to get all grades for a student in a specific course for a specific semester.
message GetStudentCourseGradesResponse {
  repeated SingleGrade grades = 1;
}

// UpdateSingleGradeRequest is a request message to update a single grade for a specific student in a specific course for a specific semester.
message UpdateSingleGradeRequest {
  string token = 1;
  string courseId = 2;
  string semester = 3;
  string studentId = 4;
  string gradeId = 5;
  string gradeValue = 6;
  string gradedBy = 7;
  string comments = 8;
  string gradeType = 9;
  string itemId = 10;
}

// UpdateSingleGradeResponse is a response message to update a single grade for a specific student in a specific course for a specific semester.
message UpdateSingleGradeResponse {
  SingleGrade grade = 1;
}

// RemoveSingleGradeRequest is a request message to remove a single grade for a specific student in a specific course for a specific semester.
message RemoveSingleGradeRequest {
  string token = 1;
  string courseId = 2;
  string semester = 3;
  string studentId = 4;
  string gradeId = 5;
}

// RemoveSingleGradeResponse is a response message to remove a single grade for a specific student in a specific course for a specific semester.
message RemoveSingleGradeResponse {
  bool success = 1;
}

// GetCourseGradesRequest is a request message to get all students grades for a specific course for a specific semester.
message GetCourseGradesRequest {
  string token = 1;
  string courseId = 2;
  string semester = 3;
}

// GetCourseGradesResponse is a response message to get all students grades for a specific course for a specific semester.
message GetCourseGradesResponse {
  repeated SingleGrade grades = 1;
}

// GetStudentSemesterGradesRequest is a request message to get all grades for a specific student for a specific semester.
message GetStudentSemesterGradesRequest {
  string token = 1;
  string semester = 2;
  string studentId = 3;
}

// GetStudentSemesterGradesResponse is a response message to get all grades for a specific student for a specific semester.
message GetStudentSemesterGradesResponse {
  repeated SingleGrade grades = 1;
}

